--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,9 @@
         "module": "ES2015",
         "target": "ES2015",
         "strict": true,
-        "noEmitOnError": true
+        "removeComments": true,
+        "noImplicitAny": true,
+        "noEmitOnError": true,
+        "moduleResolution": "node"
     }
 }
