--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode development --config webpack.config.js",
+    "publish": "webpack --mode production --config webpack.config.js",
     "start": "webpack serve --open chrome.exe"
   },
   "keywords": [],
@@ -16,9 +17,10 @@
     "@babel/preset-env": "^7.18.2",
     "any-touch": "^2.2.0",
     "babel-loader": "^8.2.5",
-    "clean-webpack-plugin": "^4.0.0",
     "core-js": "^3.22.8",
     "css-loader": "^6.7.1",
+    "eslint": "^8.17.0",
+    "eslint-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^5.5.0",
     "less": "^4.1.2",
     "less-loader": "^11.0.0",
